--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="/static/css/home.css" />
     <!-- Common style -->
     <link rel="stylesheet" href="/static/css/index.css" />
+    <link rel="stylesheet" href="/static/css/countries.css" />
   </head>
   <body>
     <nav id="nav">
