--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,7 @@
     <!-- Common style -->
     <link rel="stylesheet" href="/static/css/index.css" />
     <link rel="stylesheet" href="/static/css/countries.css" />
+    <link rel="stylesheet" href="/static/css/countryView.css" />
   </head>
   <body>
     <nav id="nav">
